--- a/CurvedPlanarReformat/Resources/UI/CurvedPlanarReformat.ui
+++ b/CurvedPlanarReformat/Resources/UI/CurvedPlanarReformat.ui
@@ -208,7 +208,7 @@
       <enum>Qt::TabFocus</enum>
      </property>
      <property name="toolTip">
-      <string>Pick the output to the algorithm.</string>
+      <string>Volume that will store mean intensity projection of the straightened volume.</string>
      </property>
      <property name="nodeTypes">
       <stringlist>
