ENH: Make ImportOsirixROI module accept multiple ROIs
ROIs are grouped by name. Each name will generate one segment.

--- a/ImportOsirixROI/Resources/UI/ImportOsirixROI.ui
+++ b/ImportOsirixROI/Resources/UI/ImportOsirixROI.ui
@@ -121,7 +121,7 @@
      </property>
     </widget>
    </item>
-   <item row="7" column="0">
+   <item row="9" column="0">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -133,6 +133,20 @@
       </size>
      </property>
     </spacer>
+   </item>
+   <item row="7" column="0" colspan="2">
+    <widget class="QProgressBar" name="progressBar">
+     <property name="value">
+      <number>24</number>
+     </property>
+    </widget>
+   </item>
+   <item row="8" column="0" colspan="2">
+    <widget class="QLabel" name="progressLabel">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
