--- a/ImportOsirixROI/Resources/UI/ImportOsirixROI.ui
+++ b/ImportOsirixROI/Resources/UI/ImportOsirixROI.ui
@@ -68,14 +68,14 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
+      <item row="2" column="0">
        <widget class="QLabel" name="label_2">
         <property name="text">
          <string>Output segmentation:</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
+      <item row="2" column="1">
        <widget class="qMRMLNodeComboBox" name="outputSelector">
         <property name="toolTip">
          <string>Pick the output to the algorithm.</string>
@@ -101,6 +101,26 @@
          <bool>true</bool>
         </property>
         <property name="renameEnabled">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Smoothing:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QCheckBox" name="smoothingCheckBox">
+        <property name="toolTip">
+         <string>Apply bspline smoothing to the input points. If disabled then ROI points are connected using line segments.</string>
+        </property>
+        <property name="text">
+         <string> </string>
+        </property>
+        <property name="checked">
          <bool>true</bool>
         </property>
        </widget>
