--- a/Lights/Resources/UI/Lights.ui
+++ b/Lights/Resources/UI/Lights.ui
@@ -1,37 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>UtilTest</class>
- <widget class="QWidget" name="UtilTest">
+ <class>Lights</class>
+ <widget class="QWidget" name="Lights">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>352</width>
-    <height>433</height>
+    <height>494</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
-   <item row="0" column="1">
-    <widget class="qMRMLCheckableNodeComboBox" name="managedViewsCheckableNodeComboBox">
-     <property name="nodeTypes">
-      <stringlist>
-       <string>vtkMRMLViewNode</string>
-      </stringlist>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0">
-    <widget class="QLabel" name="label_17">
+   <item row="3" column="0" colspan="3">
+    <widget class="ctkCollapsibleButton" name="SSAOCollapsibleButton">
      <property name="text">
-      <string>Managed 3D views:</string>
+      <string>Ambient shadows (SSAO)</string>
      </property>
-    </widget>
-   </item>
-   <item row="0" column="2">
-    <widget class="QPushButton" name="selectAllViewsPushButton">
-     <property name="text">
-      <string>Select all</string>
-     </property>
+     <layout class="QFormLayout" name="formLayout_6">
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_18">
+        <property name="text">
+         <string>Size scale:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="label_19">
+        <property name="text">
+         <string>Enable:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="ctkCheckBox" name="ssaoCheckBox"/>
+      </item>
+      <item row="1" column="1">
+       <widget class="ctkSliderWidget" name="ssaoSizeScaleSliderWidget">
+        <property name="toolTip">
+         <string>Size scale used for determining size of features to be emphasized or suppressed. The scale is logairthmic, default (0.0) corresponds to object size of about 100mm.</string>
+        </property>
+        <property name="singleStep">
+         <double>0.100000000000000</double>
+        </property>
+        <property name="pageStep">
+         <double>0.500000000000000</double>
+        </property>
+        <property name="minimum">
+         <double>-3.000000000000000</double>
+        </property>
+        <property name="maximum">
+         <double>3.000000000000000</double>
+        </property>
+        <property name="value">
+         <double>0.000000000000000</double>
+        </property>
+        <property name="prefix">
+         <string/>
+        </property>
+        <property name="suffix">
+         <string/>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
    <item row="2" column="0" colspan="3">
@@ -538,54 +569,49 @@
      </layout>
     </widget>
    </item>
-   <item row="3" column="0" colspan="3">
-    <widget class="ctkCollapsibleButton" name="SSAOCollapsibleButton">
-     <property name="text">
-      <string>Ambient shadows (SSAO)</string>
+   <item row="0" column="1">
+    <widget class="qMRMLCheckableNodeComboBox" name="managedViewsCheckableNodeComboBox">
+     <property name="nodeTypes">
+      <stringlist>
+       <string>vtkMRMLViewNode</string>
+      </stringlist>
      </property>
-     <layout class="QFormLayout" name="formLayout_6">
-      <item row="1" column="0">
-       <widget class="QLabel" name="label_18">
-        <property name="text">
-         <string>Size scale:</string>
-        </property>
-       </widget>
-      </item>
+    </widget>
+   </item>
+   <item row="0" column="2">
+    <widget class="QPushButton" name="selectAllViewsPushButton">
+     <property name="text">
+      <string>Select all</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QLabel" name="label_17">
+     <property name="text">
+      <string>Managed 3D views:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0" colspan="3">
+    <widget class="ctkCollapsibleButton" name="CollapsibleButton_2">
+     <property name="toolTip">
+      <string>Specify lighting using an image for models rendered with PBR interpolation.</string>
+     </property>
+     <property name="text">
+      <string>Image-based lighting</string>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_3">
       <item row="0" column="0">
-       <widget class="QLabel" name="label_19">
+       <widget class="QPushButton" name="imageNone">
         <property name="text">
-         <string>Enable:</string>
+         <string>None</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="ctkCheckBox" name="ssaoCheckBox"/>
-      </item>
-      <item row="1" column="1">
-       <widget class="ctkSliderWidget" name="ssaoSizeScaleSliderWidget">
-        <property name="toolTip">
-         <string>Size scale used for determining size of features to be emphasized or suppressed. The scale is logairthmic, default (0.0) corresponds to object size of about 100mm.</string>
-        </property>
-        <property name="singleStep">
-         <double>0.100000000000000</double>
-        </property>
-        <property name="pageStep">
-         <double>0.500000000000000</double>
-        </property>
-        <property name="minimum">
-         <double>-3.000000000000000</double>
-        </property>
-        <property name="maximum">
-         <double>3.000000000000000</double>
-        </property>
-        <property name="value">
-         <double>0.000000000000000</double>
-        </property>
-        <property name="prefix">
-         <string/>
-        </property>
-        <property name="suffix">
-         <string/>
+       <widget class="QPushButton" name="imageHospitalRoom">
+        <property name="text">
+         <string>Hospital room</string>
         </property>
        </widget>
       </item>
